--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My name is Hashir Shoaib. I’m a graduate of 2020 from National University of Sciences and Technology at Islamabad with a degree in Computer Engineering. I'm most passionate about giving back to the community, and my goal is to pursue this passion within the field of software engineering. In my free time I like working on open source projects."
+      content="My name is Amari Swain. I’m currently a graduate student at Purdue University, im working towards my Master’s degree in Health Informatics. I obtained my Bachelor’s degree in Criminal Justice with a minor in Software Development from the University of North Carolina at Charlotte. I'm most passionate about giving back to the community, and my goal is to help advance healthcare through the use of technology. I have various projects on my GitHub from my courses as I pursued my degrees."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hashir Shoaib</title>
+    <title>Amari Swain</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
